--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
-  <link rel="icon" href="favicon.ico"  type="image/x-icon">
+  <link rel="icon" href="icono/favicon.ico"  type="image/x-icon">
 </head>
 <body>
   <div class="container">
@@ -23,6 +23,12 @@
       <label for="precio">Precio Unitario:</label>
       <input type="number" id="precio" step="0.01" min="0.01" required>
 
+      <button type="submit">Registrar Venta</button>
+      <!-- Nueva casilla para Venta por Mayor -->
+      <label>
+        <input type="checkbox" id="porMayor" />
+        Venta por Mayor
+      </label>
       <button type="submit">Registrar Venta</button>
     </form>
 
@@ -47,5 +53,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
